# crumb

./: README.md
crumb_eval/: README.md  pyproject.toml
crumb_eval/src/crumb_eval/: __init__.py  cli.py
crumb_eval/src/crumb_eval/eval/: data_representations.py  eval.py
crumb_eval/src/crumb_eval/utils/: json_utils.py  path_utils.py
