[project]
name = "crumb-eval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Julian", email = "jfkback@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.24.0",
    "jsonlines>=4.0.0",
]

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
