[project]
name = "crumb-eval"
version = "0.1.0"
description = "A package to make evaluation on the CRUMB benchmark easier."
authors = [
    { name = "Julian", email = "jfkback@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "cyclopts>=3.24.0",
    "datasets>=4.0.0",
    "ir-measures>=0.4.1",
    "jsonlines>=4.0.0",
]

[project.scripts]
crumb-eval = "crumb_eval.cli:main"

[build-system]
requires = ["uv_build>=0.8.8,<0.9.0"]
build-backend = "uv_build"
